--- a/backend/.choreo/component.yaml
+++ b/backend/.choreo/component.yaml
@@ -11,5 +11,5 @@ endpoints:
         - Public
 dependencies:
     connectionReferences:
-    - name: openai-connection
-      resourceRef: thirdparty:openai/v1
+    - name: openrouter-connection
+      resourceRef: service:/adventuregameai/openaiapi/v1/proxy/PROJECT
